--- a/portfolio/portfolio.csproj
+++ b/portfolio/portfolio.csproj
@@ -62,8 +62,11 @@
     <Content Include="css\normalize.css" />
     <Content Include="humans.txt" />
     <Content Include="img\curling.png" />
+    <Content Include="img\foundationcropround.png" />
+    <Content Include="img\javaclear.png" />
     <Content Include="img\jurassic_park.png" />
     <Content Include="img\logo.png" />
+    <Content Include="img\ScrumSmallNoLabels.png" />
     <Content Include="img\yoyo.png" />
     <Content Include="index.html" />
     <Content Include="js\foundation.min.js" />
