--- a/portfolio/portfolio.csproj
+++ b/portfolio/portfolio.csproj
@@ -66,6 +66,7 @@
     <Content Include="img\javaclear.png" />
     <Content Include="img\jurassic_park.png" />
     <Content Include="img\logo.png" />
+    <Content Include="img\Portrait.jpg" />
     <Content Include="img\ScrumSmallNoLabels.png" />
     <Content Include="img\yoyo.png" />
     <Content Include="index.html" />
